infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intratrade-ingress
  namespace: intratrade
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: chandudevopai.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intratrade-service
                port:
                  number: 80
